--- a/events/templates/events/book_event.html
+++ b/events/templates/events/book_event.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Book Event</title>
+    <title>Book an Event</title>
     <style>
         body {
             font-family: Arial, sans-serif;
